Fix file name overflowing

--- a/src/subtitulamos/resources/assets/css/upload.scss
+++ b/src/subtitulamos/resources/assets/css/upload.scss
@@ -92,11 +92,12 @@
     }
 
     #file-name {
-      width: 100%;
+      width: 70%;
       text-align: center;
       font-size: 1.1rem;
       font-weight: 500;
       letter-spacing: -0.3px;
+      word-break: break-all;
     }
   }
 }
